--- a/WebAPP/style.css
+++ b/WebAPP/style.css
@@ -18,7 +18,7 @@ body{
 .wrapper{
     width: 420px;
     background:transparent;
-    border: 2px solid rgba(255,255,255,.2);
+    border: 2px solid black;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(0,0,0,.2);
     color:white;
@@ -116,4 +116,73 @@ body{
 
 .register-link p a:hover{
    text-decoration: underline;
+}
+
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.chat-container {
+    border: 3px solid black;
+    border-radius: 5px;
+    width: 600px;
+}
+
+.chat {
+    padding: 10px;
+    overflow-y: auto;
+    max-height: 300px; /* Adjust as needed */
+}
+
+.message {
+    margin-bottom: 10px;
+}
+
+.message-content {
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    padding: 5px 10px;
+    max-width: 70%;
+    word-wrap: break-word;
+}
+
+.incoming .message-content {
+    align-self: flex-start;
+}
+
+.outgoing .message-content {
+    align-self: flex-end;
+}
+
+.compose {
+    display: flex;
+    padding: 10px;
+    background-color: #f9f9f9;
+}
+
+.compose textarea {
+    flex: 1;
+    resize: none;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 5px;
+    margin-right: 10px;
+}
+
+.compose button {
+    border: none;
+    background-color: silver;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.compose button:hover {
+    background-color:silver;
 }
